welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: not found: value T
  T = new Array[Color](getMondeHauteur)
  ^Array2:6: error: only classes can have declared but undefined members
  val decalage: Int
      ^Array2:8: error: not found: value T
    T(i)= getCouleurSol()
    ^Array2:12: error: reassignment to val
    decalage = litMessage().toInt
             ^Array2:14: error: not found: value T
      setCouleurBrosse(T( (i+decalage)%getMondeHauteur))
                       ^Array2:19: error: not found: value T
    setCouleurBrosse(T( (getMondeHauteur+decalage)%getMondeHauteur))
                     ^